--- a/index.html
+++ b/index.html
@@ -1,13 +1,34 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Roboto:300,400,500" rel="stylesheet">
-    <link rel="stylesheet" href="css/main.css">
-    <title></title>
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Roboto:300,400,500" rel="stylesheet">
+  <link rel="stylesheet" href="css/main.css">
+  <title>N Y C</title>
+</head>
 
-  </body>
+<body>
+
+  <header class="hamburguer">
+    <img src="images/ico-menu.svg" alt="menu">
+  </header>
+
+  <section class="hero-backgorund">
+    <h1 class="tilte-hero uppercase center no-margin">anonymous proxy</h1>
+    <h4 class="subtitle-hero center no-margin">In hac habitasse platea dictumst.</h4>
+    <div class="button-next-section margin-top-regular margin-bottom-regular">
+      <a href="#introduction-section">
+        <img src="images/ico-scroll-down.svg" alt="siguiente seccion">
+      </a>
+    </div>
+
+  </section>
+
+  <main>
+
+
+  </main>
+
+</body>
 </html>
