mobile version ok

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <img src="images/ico-menu.svg" alt="menu">
   </header>
 
-  <section class="hero-backgorund">
+  <section id="hero" class="hero-backgorund">
     <h1 class="tilte-hero uppercase center no-margin">anonymous proxy</h1>
     <h4 class="subtitle-hero center no-margin">In hac habitasse platea dictumst.</h4>
-    <div class="button-next-section margin-top-regular margin-bottom-regular">
+    <div class="button-scroll margin-top-regular margin-bottom-regular">
       <a href="#introduction-section">
         <img src="images/ico-scroll-down.svg" alt="siguiente seccion">
       </a>
@@ -26,7 +26,47 @@
   </section>
 
   <main>
+    <section id="introduction-section" class="general-margin">
+      <h6 class="pretitle-section no-margin margin-top-s">Insomnia Tips</h6>
+      <h2 class="title-section no-margin">Looking Through A Window</h2>
+      <p class="introduction">Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at luctus ex diam nec lectus. Vivamus semper sodales rutrum.</p>
+      <div class="button-positive margin-top-s">
+        <a href="#central-section" class="link-style-none button-font-positive center">Go</a>
+      </div>
+    </section>
 
+    <section id="central-section" class="background-light-color">
+      <h2 class="title-section center padding-top-s">3 Reasons To Purchase</h2>
+      <ul class="list-margin">
+        <li class="margin-top-regular">
+          <h5 class="highlight-content center no-margin">Ut sed metus</h5>
+          <p class="center no-margin">Lorem ipsum dolor sit amet, consecteur.</p>
+        </li>
+
+        <li class="margin-top-regular">
+          <h5 class="highlight-content center no-margin">Curabitur ac erat</h5>
+          <p class="center no-margin">Mauris mattis urna quis lorem molestie.</p>
+        </li>
+
+        <li class="margin-top-regular">
+          <h5 class="highlight-content center no-margin">Morbi dictum</h5>
+          <p class="center no-margin">Aliquam in dolor et dolor tincidunt.</p>
+        </li>
+      </ul>
+      <div class="button-negative margin-top-regular margin-bottom-big center button-margin">
+        <p class="button-font-negative">More reasons</p>
+      </div>
+    </section>
+
+    <footer class="backgorund-dark-color align-content">
+      <div class="button-scroll">
+        <a href="#hero">
+          <img src="images/ico-arrow.svg" alt="icono subir">
+        </a>
+      </div>
+      <p class="footer-font no-margin">&copy;2017</p>
+      <p class="footer-font no-margin">we <span>&#9829;</span> components</p>
+    </footer>
 
   </main>
 
