medias for tablet and desktop and animation for button positive and negative

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </header>
 
   <section id="hero" class="hero-backgorund">
-    <h1 class="tilte-hero uppercase center no-margin">anonymous proxy</h1>
+    <h1 class="tilte-hero uppercase center no-margin general-margin">anonymous proxy</h1>
     <h4 class="subtitle-hero center no-margin">In hac habitasse platea dictumst.</h4>
     <div class="button-scroll margin-top-regular margin-bottom-regular">
       <a href="#introduction-section">
@@ -30,37 +30,37 @@
       <h6 class="pretitle-section no-margin margin-top-s">Insomnia Tips</h6>
       <h2 class="title-section no-margin">Looking Through A Window</h2>
       <p class="introduction">Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at luctus ex diam nec lectus. Vivamus semper sodales rutrum.</p>
-      <div class="button-positive margin-top-s">
+      <div class="button-positive margin-top-s margin-bottom-m transition-postive">
         <a href="#central-section" class="link-style-none button-font-positive center">Go</a>
       </div>
     </section>
 
     <section id="central-section" class="background-light-color">
       <h2 class="title-section center padding-top-s">3 Reasons To Purchase</h2>
-      <ul class="list-margin">
-        <li class="margin-top-regular">
-          <h5 class="highlight-content center no-margin">Ut sed metus</h5>
+      <ul class="list-margin wrapper">
+        <li class="margin-top-regular list-item1">
+          <h5 class="highlight-content center no-margin margin-tablet">Ut sed metus</h5>
           <p class="center no-margin">Lorem ipsum dolor sit amet, consecteur.</p>
         </li>
 
-        <li class="margin-top-regular">
-          <h5 class="highlight-content center no-margin">Curabitur ac erat</h5>
+        <li class="margin-top-regular list-item2">
+          <h5 class="highlight-content center no-margin margin-tablet">Curabitur ac erat</h5>
           <p class="center no-margin">Mauris mattis urna quis lorem molestie.</p>
         </li>
 
-        <li class="margin-top-regular">
-          <h5 class="highlight-content center no-margin">Morbi dictum</h5>
+        <li class="margin-top-regular list-item3">
+          <h5 class="highlight-content center no-margin margin-tablet">Morbi dictum</h5>
           <p class="center no-margin">Aliquam in dolor et dolor tincidunt.</p>
         </li>
       </ul>
-      <div class="button-negative margin-top-regular margin-bottom-big center button-margin">
+      <div class="button-negative margin-top-regular margin-bottom-big center button-margin transition-negative">
         <p class="button-font-negative">More reasons</p>
       </div>
     </section>
 
     <footer class="backgorund-dark-color align-content">
-      <div class="button-scroll">
-        <a href="#hero">
+      <div class="button-scroll margin-top-negative margin-bottom-small">
+        <a href="#hero" class="button-top">
           <img src="images/ico-arrow.svg" alt="icono subir">
         </a>
       </div>
