corrected transition time

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <h6 class="pretitle-section no-margin margin-top-s">Insomnia Tips</h6>
       <h2 class="title-section no-margin">Looking Through A Window</h2>
       <p class="introduction">Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at luctus ex diam nec lectus. Vivamus semper sodales rutrum.</p>
-      <div class="button-positive margin-top-s margin-bottom-m transition-postive">
+      <div class="button-positive margin-top-s margin-bottom-m">
         <a href="#central-section" class="link-style-none button-font-positive center">Go</a>
       </div>
     </section>
@@ -61,7 +61,7 @@
           <p class="center no-margin">Aliquam in dolor et dolor tincidunt.</p>
         </li>
       </ul>
-      <div class="button-negative margin-top-regular margin-bottom-big center button-margin transition-negative">
+      <div class="button-negative margin-top-regular margin-bottom-big center button-margin">
         <p class="button-font-negative">More reasons</p>
       </div>
     </section>
