--- a/index.html
+++ b/index.html
@@ -3,16 +3,52 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Roboto:300,400,500" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400,700|Roboto:300,400,500" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
   <title>N Y C</title>
 </head>
 
 <body>
 
+<div class="menu-display">
   <header class="hamburguer">
     <img src="images/ico-menu.svg" alt="menu">
   </header>
+
+  <nav class="background-menu">
+    <div class="close-button">
+      <button type="button" name="button">
+        <svg width="16px" height="16px" viewBox="0 0 16 16" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+            <!-- Generator: Sketch 48.2 (47327) - http://www.bohemiancoding.com/sketch -->
+            <title>ico-close</title>
+            <desc>Created with Sketch.</desc>
+            <defs></defs>
+            <g id="Menú-Close" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(-14.000000, -14.000000)">
+                <g id="menu" fill="#FFFFFF" fill-rule="nonzero">
+                    <path d="M15.3333333,30 C14.9333333,30 14.6666667,29.8666667 14.4,29.6 C13.8666667,29.0666667 13.8666667,28.2666667 14.4,27.7333333 L20.1333333,22 L14.5333333,16.2666667 C14,15.7333333 14,14.9333333 14.5333333,14.4 C15.0666667,13.8666667 15.8666667,13.8666667 16.4,14.4 L22,20.1333333 L27.7333333,14.4 C28.2666667,13.8666667 29.0666667,13.8666667 29.6,14.4 C30.1333333,14.9333333 30.1333333,15.7333333 29.6,16.2666667 L23.8666667,22 L29.6,27.7333333 C30.1333333,28.2666667 30.1333333,29.0666667 29.6,29.6 C29.0666667,30.1333333 28.2666667,30.1333333 27.7333333,29.6 L22,23.8666667 L16.2666667,29.6 C16,29.8666667 15.7333333,30 15.3333333,30 Z" id="ico-close"></path>
+                </g>
+            </g>
+        </svg>
+      </button>
+    </div>
+    <ul class="margin-top-regular">
+      <li>
+        <hr class="menu-line">
+        <a href="#hero" class="menu-font link-style-none margin-left-menu">Anonymous proxy</a>
+        <hr class="menu-line">
+      </li>
+      <li>
+        <a href="#introduction-section" class="menu-font link-style-none margin-left-menu">Looking Through A Window</a>
+        <hr class="menu-line">
+      </li>
+      <li>
+        <a href="#central-section" class="menu-font link-style-none margin-left-menu">3 Reasons To Purchase</a>
+        <hr class="menu-line">
+      </li>
+    </ul>
+  </nav>
+</div>
+
 
   <section id="hero" class="hero-backgorund">
     <h1 class="tilte-hero uppercase center no-margin general-margin">anonymous proxy</h1>
@@ -88,5 +124,6 @@
 
   </main>
 
+<script src="js/main.js" charset="utf-8"></script>
 </body>
 </html>
