--- a/index.html
+++ b/index.html
@@ -10,32 +10,32 @@
 
 <body>
 
-<div class="menu-display">
-  <header class="hamburguer">
-    <img src="images/ico-menu.svg" alt="menu">
-  </header>
+  <div class="menu-display">
+    <header class="hamburguer">
+      <img src="images/ico-menu.svg" alt="menu">
+    </header>
 
-  <nav class="background-menu">
-    <div class="close-button">
-      <img src="images/ico-close.svg" alt="cerrar">
-    </div>
-    <ul class="margin-top-regular">
-      <li class="background-menu-link">
-        <hr class="menu-line">
-        <a href="#hero" class="menu-font link-style-none margin-left-menu">Anonymous proxy</a>
-        <hr class="menu-line">
-      </li>
-      <li class="background-menu-link">
-        <a href="#introduction-section" class="menu-font link-style-none margin-left-menu">Looking Through A Window</a>
-        <hr class="menu-line">
-      </li>
-      <li class="background-menu-link">
-        <a href="#central-section" class="menu-font link-style-none margin-left-menu">3 Reasons To Purchase</a>
-        <hr class="menu-line">
-      </li>
-    </ul>
-  </nav>
-</div>
+    <nav class="background-menu">
+      <div class="close-button">
+        <img src="images/ico-close.svg" alt="cerrar">
+      </div>
+      <ul class="margin-top-regular">
+        <li class="background-menu-link">
+          <hr class="menu-line">
+          <a href="#hero" class="menu-font link-style-none margin-left-menu">Anonymous proxy</a>
+          <hr class="menu-line">
+        </li>
+        <li class="background-menu-link">
+          <a href="#introduction-section" class="menu-font link-style-none margin-left-menu">Looking Through A Window</a>
+          <hr class="menu-line">
+        </li>
+        <li class="background-menu-link">
+          <a href="#central-section" class="menu-font link-style-none margin-left-menu">3 Reasons To Purchase</a>
+          <hr class="menu-line">
+        </li>
+      </ul>
+    </nav>
+  </div>
 
 
   <section id="hero" class="hero-backgorund">
@@ -44,13 +44,13 @@
     <div class="button-scroll margin-top-regular margin-bottom-regular">
       <a href="#introduction-section">
         <svg width="20px" height="12px" viewBox="0 0 20 12" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-            <!-- Generator: Sketch 48.2 (47327) - http://www.bohemiancoding.com/sketch -->
-            <title>ico-scroll-down</title>
-            <desc>Created with Sketch.</desc>
-            <defs></defs>
-            <g id="Down" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(-13.000000, -18.000000)">
-                <path d="M23,29.6666667 C22.5,29.6666667 22.1666667,29.5 21.8333333,29.1666667 L13.5,20.8333333 C12.8333333,20.1666667 12.8333333,19.1666667 13.5,18.5 C14.1666667,17.8333333 15.1666667,17.8333333 15.8333333,18.5 L23,25.6666667 L30.1666667,18.5 C30.8333333,17.8333333 31.8333333,17.8333333 32.5,18.5 C33.1666667,19.1666667 33.1666667,20.1666667 32.5,20.8333333 L24.1666667,29.1666667 C23.8333333,29.5 23.5,29.6666667 23,29.6666667 Z" id="ico-scroll-down" fill="#F26002" fill-rule="nonzero"></path>
-            </g>
+          <!-- Generator: Sketch 48.2 (47327) - http://www.bohemiancoding.com/sketch -->
+          <title>ico-scroll-down</title>
+          <desc>Created with Sketch.</desc>
+          <defs></defs>
+          <g id="Down" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(-13.000000, -18.000000)">
+            <path d="M23,29.6666667 C22.5,29.6666667 22.1666667,29.5 21.8333333,29.1666667 L13.5,20.8333333 C12.8333333,20.1666667 12.8333333,19.1666667 13.5,18.5 C14.1666667,17.8333333 15.1666667,17.8333333 15.8333333,18.5 L23,25.6666667 L30.1666667,18.5 C30.8333333,17.8333333 31.8333333,17.8333333 32.5,18.5 C33.1666667,19.1666667 33.1666667,20.1666667 32.5,20.8333333 L24.1666667,29.1666667 C23.8333333,29.5 23.5,29.6666667 23,29.6666667 Z" id="ico-scroll-down" fill="#F26002" fill-rule="nonzero"></path>
+          </g>
         </svg>
       </a>
     </div>
@@ -91,18 +91,18 @@
     </section>
 
     <footer class="backgorund-dark-color align-content">
-      <div class="button-scroll margin-top-negative margin-bottom-small">
+      <div class="button-scroll button-shadow margin-top-negative margin-bottom-small">
         <a href="#hero" class="button-top">
           <svg width="21px" height="24px" viewBox="0 0 21 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-              <!-- Generator: Sketch 48.2 (47327) - http://www.bohemiancoding.com/sketch -->
-              <title>ico-arrow</title>
-              <desc>Created with Sketch.</desc>
-              <defs></defs>
-              <g id="up-btn" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(-12.000000, -11.000000)">
-                  <g fill="#F26002" fill-rule="nonzero" id="ico-arrow">
-                      <path d="M12.5142857,22.4857143 C13.2,23.1714286 14.2285714,23.1714286 14.9142857,22.4857143 L20.5714286,16.8285714 L20.5714286,33.2857143 C20.5714286,34.3142857 21.2571429,35 22.2857143,35 C23.3142857,35 24,34.3142857 24,33.2857143 L24,16.8285714 L29.6571429,22.4857143 C30.3428571,23.1714286 31.3714286,23.1714286 32.0571429,22.4857143 C32.7428571,21.8 32.7428571,20.7714286 32.0571429,20.0857143 L23.4857143,11.5142857 C23.1428571,11.1714286 22.8,11 22.2857143,11 C21.7714286,11 21.4285714,11.1714286 21.0857143,11.5142857 L12.5142857,20.0857143 C11.8285714,20.7714286 11.8285714,21.8 12.5142857,22.4857143 Z"></path>
-                  </g>
+            <!-- Generator: Sketch 48.2 (47327) - http://www.bohemiancoding.com/sketch -->
+            <title>ico-arrow</title>
+            <desc>Created with Sketch.</desc>
+            <defs></defs>
+            <g id="up-btn" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(-12.000000, -11.000000)">
+              <g fill="#F26002" fill-rule="nonzero" id="ico-arrow">
+                <path d="M12.5142857,22.4857143 C13.2,23.1714286 14.2285714,23.1714286 14.9142857,22.4857143 L20.5714286,16.8285714 L20.5714286,33.2857143 C20.5714286,34.3142857 21.2571429,35 22.2857143,35 C23.3142857,35 24,34.3142857 24,33.2857143 L24,16.8285714 L29.6571429,22.4857143 C30.3428571,23.1714286 31.3714286,23.1714286 32.0571429,22.4857143 C32.7428571,21.8 32.7428571,20.7714286 32.0571429,20.0857143 L23.4857143,11.5142857 C23.1428571,11.1714286 22.8,11 22.2857143,11 C21.7714286,11 21.4285714,11.1714286 21.0857143,11.5142857 L12.5142857,20.0857143 C11.8285714,20.7714286 11.8285714,21.8 12.5142857,22.4857143 Z"></path>
               </g>
+            </g>
           </svg>
         </a>
       </div>
@@ -112,6 +112,6 @@
 
   </main>
 
-<script src="js/main.js" charset="utf-8"></script>
+  <script src="js/main.js" charset="utf-8"></script>
 </body>
 </html>
