--- a/index.html
+++ b/index.html
@@ -68,50 +68,51 @@
     </section>
 
     <section id="central-section" class="background-light-color">
-      <h2 class="title-section center padding-top-s">3 Reasons To Purchase</h2>
-      <ul class="list-margin wrapper">
-        <li class="margin-top-regular list-item1">
+      <h2 class="title-section center padding-top-s margin-bottom-m">3 Reasons To Purchase</h2>
+      <div class="grid-container wrapper list-margin">
+        <div class="row margin-bottom-m">
           <h5 class="highlight-content center no-margin margin-tablet">Ut sed metus</h5>
           <p class="center no-margin">Lorem ipsum dolor sit amet, consecteur.</p>
-        </li>
+        </div>
 
-        <li class="margin-top-regular list-item2">
+        <div class="row margin-bottom-m">
           <h5 class="highlight-content center no-margin margin-tablet">Curabitur ac erat</h5>
           <p class="center no-margin">Mauris mattis urna quis lorem molestie.</p>
-        </li>
+        </div>
 
-        <li class="margin-top-regular list-item3">
+        <div class="row margin-bottom-m">
           <h5 class="highlight-content center no-margin margin-tablet">Morbi dictum</h5>
           <p class="center no-margin">Aliquam in dolor et dolor tincidunt.</p>
-        </li>
-      </ul>
-      <div class="button-negative margin-top-regular margin-bottom-big center button-margin">
-        <p class="button-font-negative">More reasons</p>
+        </div>
       </div>
-    </section>
 
-    <footer class="backgorund-dark-color align-content">
-      <div class="button-scroll button-shadow margin-top-negative margin-bottom-small">
-        <a href="#hero" class="button-top">
-          <svg width="21px" height="24px" viewBox="0 0 21 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-            <!-- Generator: Sketch 48.2 (47327) - http://www.bohemiancoding.com/sketch -->
-            <title>ico-arrow</title>
-            <desc>Created with Sketch.</desc>
-            <defs></defs>
-            <g id="up-btn" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(-12.000000, -11.000000)">
-              <g fill="#F26002" fill-rule="nonzero" id="ico-arrow">
-                <path d="M12.5142857,22.4857143 C13.2,23.1714286 14.2285714,23.1714286 14.9142857,22.4857143 L20.5714286,16.8285714 L20.5714286,33.2857143 C20.5714286,34.3142857 21.2571429,35 22.2857143,35 C23.3142857,35 24,34.3142857 24,33.2857143 L24,16.8285714 L29.6571429,22.4857143 C30.3428571,23.1714286 31.3714286,23.1714286 32.0571429,22.4857143 C32.7428571,21.8 32.7428571,20.7714286 32.0571429,20.0857143 L23.4857143,11.5142857 C23.1428571,11.1714286 22.8,11 22.2857143,11 C21.7714286,11 21.4285714,11.1714286 21.0857143,11.5142857 L12.5142857,20.0857143 C11.8285714,20.7714286 11.8285714,21.8 12.5142857,22.4857143 Z"></path>
-              </g>
+    <div class="add-reason button-negative margin-bottom-big center button-margin">
+      <p class="button-font-negative">More reasons</p>
+    </div>
+  </section>
+
+  <footer class="backgorund-dark-color align-content">
+    <div class="button-scroll button-shadow margin-top-negative margin-bottom-small">
+      <a href="#hero" class="button-top">
+        <svg width="21px" height="24px" viewBox="0 0 21 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+          <!-- Generator: Sketch 48.2 (47327) - http://www.bohemiancoding.com/sketch -->
+          <title>ico-arrow</title>
+          <desc>Created with Sketch.</desc>
+          <defs></defs>
+          <g id="up-btn" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(-12.000000, -11.000000)">
+            <g fill="#F26002" fill-rule="nonzero" id="ico-arrow">
+              <path d="M12.5142857,22.4857143 C13.2,23.1714286 14.2285714,23.1714286 14.9142857,22.4857143 L20.5714286,16.8285714 L20.5714286,33.2857143 C20.5714286,34.3142857 21.2571429,35 22.2857143,35 C23.3142857,35 24,34.3142857 24,33.2857143 L24,16.8285714 L29.6571429,22.4857143 C30.3428571,23.1714286 31.3714286,23.1714286 32.0571429,22.4857143 C32.7428571,21.8 32.7428571,20.7714286 32.0571429,20.0857143 L23.4857143,11.5142857 C23.1428571,11.1714286 22.8,11 22.2857143,11 C21.7714286,11 21.4285714,11.1714286 21.0857143,11.5142857 L12.5142857,20.0857143 C11.8285714,20.7714286 11.8285714,21.8 12.5142857,22.4857143 Z"></path>
             </g>
-          </svg>
-        </a>
-      </div>
-      <p class="footer-font no-margin">&copy;2017</p>
-      <p class="footer-font no-margin">we <span>&#9829;</span> components</p>
-    </footer>
+          </g>
+        </svg>
+      </a>
+    </div>
+    <p class="footer-font no-margin">&copy;2017</p>
+    <p class="footer-font no-margin">we <span>&#9829;</span> components</p>
+  </footer>
 
-  </main>
+</main>
 
-  <script src="js/main.js" charset="utf-8"></script>
+<script src="js/main.js" charset="utf-8"></script>
 </body>
 </html>
