--- a/index.html
+++ b/index.html
@@ -113,6 +113,6 @@
 
 </main>
 
-<script src="js/main.js" charset="utf-8"></script>
+<script src="js/main.min.js" charset="utf-8"></script>
 </body>
 </html>
