changed margins for padding

--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
       <div class="close-button">
         <img src="images/ico-close.svg" alt="cerrar">
       </div>
-      <ul class="margin-top-regular">
+      <ul class="margin-top-regular padding-left-menu">
         <li class="background-menu-link">
           <hr class="menu-line">
-          <a href="#hero" class="menu-font link-style-none margin-left-menu">Anonymous proxy</a>
-          <hr class="menu-line">
-        </li>
-        <li class="background-menu-link">
-          <a href="#introduction-section" class="menu-font link-style-none margin-left-menu">Looking Through A Window</a>
+          <a href="#hero" class="menu-font link-style-none">Anonymous proxy</a>
           <hr class="menu-line">
         </li>
         <li class="background-menu-link">
-          <a href="#central-section" class="menu-font link-style-none margin-left-menu">3 Reasons To Purchase</a>
+          <a href="#introduction-section" class="menu-font link-style-none">Looking Through A Window</a>
+          <hr class="menu-line">
+        </li>
+        <li class="background-menu-link">
+          <a href="#central-section" class="menu-font link-style-none">3 Reasons To Purchase</a>
           <hr class="menu-line">
         </li>
       </ul>
@@ -38,8 +38,8 @@
   </div>
 
 
-  <section id="hero" class="hero-backgorund">
-    <h1 class="tilte-hero uppercase center no-margin general-margin">anonymous proxy</h1>
+  <section id="hero" class="hero-backgorund general-padding">
+    <h1 class="tilte-hero uppercase center no-margin">anonymous proxy</h1>
     <h4 class="subtitle-hero center no-margin">In hac habitasse platea dictumst.</h4>
     <div class="button-scroll margin-top-regular margin-bottom-regular">
       <a href="#introduction-section">
@@ -58,7 +58,7 @@
   </section>
 
   <main>
-    <section id="introduction-section" class="general-margin">
+    <section id="introduction-section" class="general-padding">
       <h6 class="pretitle-section no-margin margin-top-s">Insomnia Tips</h6>
       <h2 class="title-section no-margin">Looking Through A Window</h2>
       <p class="introduction">Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at luctus ex diam nec lectus. Vivamus semper sodales rutrum.</p>
@@ -69,7 +69,7 @@
 
     <section id="central-section" class="background-light-color">
       <h2 class="title-section center padding-top-s margin-bottom-m">3 Reasons To Purchase</h2>
-      <div class="grid-container wrapper list-margin">
+      <div class="grid-container wrapper list-padding">
         <div class="row margin-bottom-m">
           <h5 class="highlight-content center no-margin margin-tablet">Ut sed metus</h5>
           <p class="center no-margin">Lorem ipsum dolor sit amet, consecteur.</p>
